# shelly-exporter

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.example.yml  test-mock-server.py
.github/: dependabot.yml
.github/workflows/: release.yml
src/: config.rs  main.rs  metrics.rs  shelly.rs
